                         made prefix-quit of "no" not use one at all, since this
                         is in example.conf and is sensicle..
- Couple of updates to INSTALL.
- Updated INSTALL to no longer say 'make install is not needed' reported by wolfy
- Fixed a oper count bug caused by +H (reported by dwd) [#0000203]
- Fixed another oper count bug caused by +H and SVSMODE/SVS2MODE [#0000203]
- Fixed yet another oper count bug caused by SVSO and +H and +O (local oper)
- Fixed a modes-on-oper bug that could cause a negative invisible and/or oper count if +i
  or +H was specified in modes-on-oper.
- Fix a minor stupid in m_quit.c.
- Added /who +R which shows real host to opers.
- Added set::scan::bind-ip, set::scan::message, on request of RaYmAn, documented
  in example.conf
- Fixed minor problem with former patch
- Fixed the set::scan::bind-ip patch to work with win32
- Added 005 token AWAYLEN= from ircu
- Heavily updated INSTALL
- Removed Win32 and READMENOW.Win32.txt (obsolete)
- Started WinXP IPv6 support (added headers)
- More WinXP IPv6, finished headers, replaced calls to inet_ntoa with Inet_ia2p
- Added support for the RIPEMD-160 encryption algorithm for encrypted passwords (supposed to be slightly 
  stronger than SHA1 and much stronger than MD5)
- Added MD5 and SHA1 password encryption support to the win32 version whether SSL is
  installed or not using the CryptoAPI library included in Windows.
- Added extras/channeldumper.c
- Fixed an alias {} bug reported by Keeper (prefix was :nick not :nick!user@host which screwed up some bots)
- Fixed a +sp bug reported by Zerwas (#0000160) fixed by JK and Luke
- Fixed a bug where locops did not receive a hidden host reported by breathingman (#0000221)
- Fixed a bug where makeconf would not work after a make install
- Fixed m_sjoin bug with banlist propagation
- Fixed compile problem with non-glob/win32 systems (sunos 4.1) found by rshurr
- Fixed secure channel only (+z) sending ERR_BANNEDFROMCHAN